2008-11-24  Arno Rehn  <arno@arnorehn.de>

	* Put the KSharedPtr marshaller in marshall_macros_kde.h

2008-10-29  Arno Rehn  <arno@arnorehn.de>

	* Don't let KIO::SlaveBase redirect SIGXCPU, since it's needed by
	  Mono's Boehm GC.

2008-10-27  Arno Rehn  <arno@arnorehn.de>

	* Add support for Mono based kio slaves by extending kimonopluginfactory.
	* Add a kio_monodoc example kio slave. It needs monodoc installed and
	  accessible through 'pkg-config --libs monodoc'.
	  You can then access the mono documentation by typing e.g.
	    monodoc:/T:System.Object
	    monodoc:/N:System.Reflection
	  in Konqueror's address bar or using kioclient from the command line.
	  Simply monodoc:/ will bring you to monodoc:/N:System

2008-08-13  Arno Rehn  <arno@arnorehn.de>

    * Make the KSharedPointer marshaller more generic and add one for
      KSharedPtr<KMimeType>.
    * Parse the main mono config after the domain was initialized. This
      fixes some libs being not found (like libc).

2008-08-05  Richard Dale  <richard.j.dale@gmail.com>

	* Make KApplication and KUniqueApplication partial classes and add the
	  code to set the 'qApp' global variable in *Extras.cs files instead of
	  generating it in the source code generator as it's more easily
	  maintained that way.

2008-08-03  Arno Rehn  <arno@arnorehn.de>

	* Implemented KUrl.List.

2008-07-31  Arno Rehn  <arno@arnorehn.de>

	* Assign a new KApplication instance to the qApp global variable.

2008-07-07  Arno Rehn  <arno@arnorehn.de>

	* KimonoPluginFactory: If a class isn't found in the assembly, look
	  through all of the classes and pick the first one that implements
	  the interface and has a matching constructor.
	* Allow to call InitRuntime() multiple times to make sure that every
	  binding is initialized.

2008-07-06  Arno Rehn  <arno@arnorehn.de>

	* mono_jit_cleanup() is now called from a function that is registered
	  via atexit(). This seems to be the only way to do that, since calling