@@ -1,3 +1,8 @@
+2008-11-28  Richard Dale  <richard.j.dale@gmail.com>
+	* Regenerate the KDateTime, KTimeZones and KSystemTimeZones classes so
+	  the Spec subclasses are more complete and Dictionary<string, KTimeZone>
+	  arg types are included.
+
 2008-11-24  Arno Rehn  <arno@arnorehn.de>
 
 	* Put the KSharedPtr marshaller in marshall_macros_kde.h
